// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Container) OasisOfferMakeForm should render 1`] = `
<Connect(ReduxForm)
  actions={
    Object {
      "buyMax": [Function],
      "sellMax": [Function],
      "totalFieldValueChanged": [Function],
      "volumeFieldValueChanged": [Function],
    }
  }
  activeTradingPairPrecision={18}
  offerTakeType="OFFER_TAKES/TAKE_SELL_OFFER"
/>
`;

exports[`(Container) OasisOfferMakeForm will receive right actions 1`] = `
Object {
  "actions": Object {
    "buyMax": [Function],
    "sellMax": [Function],
    "totalFieldValueChanged": [Function],
    "volumeFieldValueChanged": [Function],
  },
}
`;

exports[`(Container) OasisOfferMakeForm will receive right props 1`] = `
Object {
  "activeBaseTokenBalance": undefined,
  "activeOfferTakeOfferData": undefined,
  "activeQuoteTokenBalance": undefined,
  "activeTradingPairPrecision": 18,
  "buyToken": undefined,
  "globalFormLock": undefined,
  "offerTakeType": "OFFER_TAKES/TAKE_SELL_OFFER",
  "sellToken": undefined,
}
`;
